--- a/Atividade_2/src/main/resources/templates/store/index.html
+++ b/Atividade_2/src/main/resources/templates/store/index.html
@@ -25,7 +25,7 @@
           <th scope="col">Ano</th>
           <th scope="col">Quilometragem</th>
           <th scope="col">Valor</th>
-          <th scope="col">Propostas</th>
+          <th scope="col">Detalhes</th>
           <th scope="col">Editar</th>
           <th scope="col">Excluir</th>
         </tr>
